--- a/MarcheGourmetContact/privacy.html
+++ b/MarcheGourmetContact/privacy.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  Privacy:
 </head>
 <body>
 Alexandre Quiblier built the Marché Gourmet app as a free app. This SERVICE is provided by Marché Gourmet at no cost and is intended for use as is. We do not store or share your data. 
